<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CheckSymptomsActivity"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
            >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textViewQuestion"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            />
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewQuestion"
                android:orientation="vertical"
                android:id="@+id/view_1"
                android:visibility="gone"
                >
                <RadioButton android:id="@+id/radio_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1_1"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton android:id="@+id/radio_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1_2"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton android:id="@+id/radio_1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1_3"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton android:id="@+id/radio_1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1_4"
                    android:onClick="onRadioButtonClicked"/>


            </RadioGroup>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewQuestion"
                android:orientation="vertical"
                android:id="@+id/view_2"
                android:visibility="gone"
                >
                <RadioButton android:id="@+id/radio_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2_1"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton android:id="@+id/radio_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2_2"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton android:id="@+id/radio_2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2_3"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewQuestion"
                android:id="@+id/view_3"
                android:visibility="gone"

                >
                <CheckBox android:id="@+id/checkbox_3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_1"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_2"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_3"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_4"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_3_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_5"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_3_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_6"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_3_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_a_7"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewQuestion"
                android:id="@+id/view_4"
                android:visibility="gone"
                >

                <CheckBox android:id="@+id/checkbox_4_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_0"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_1"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_2"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_3"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_4_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_4"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_4_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_5"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_4_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_6"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_4_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_h_0"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewQuestion"
                android:id="@+id/view_5"
                android:visibility="visible"
                >

                <CheckBox android:id="@+id/checkbox_5_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_d_0"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_5_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_d_1"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/checkbox_5_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_d_2"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_5_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_d_3"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_5_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom_d_4"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>

        </RelativeLayout>
        <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:piv_animationType="scale"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/colorPrimaryDark"
            app:piv_unselectedColor="@color/colorPrimary"
            attrs:piv_padding="12dp"
            attrs:piv_radius="8dp"
            android:layout_above="@id/linear_buttons"
            />

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Previous"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/border_button"
                android:padding="5dp"
                android:id="@+id/buttonPrevious"
                android:onClick="buttonClick"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Next"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/border_button"

                android:onClick="buttonClick"
                android:id="@+id/buttonNext"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="Finish"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/login_button"

                android:onClick="buttonClick"
                android:id="@+id/buttonFinish"
                />
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

    <com.rom4ek.arcnavigationview.ArcNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app2:itemBackground="@android:color/white"
        app2:headerLayout="@layout/nav_header_test_navigation"
        app2:menu="@menu/activity_test_navigation_drawer"
        app2:arc_cropDirection="cropOutside"
        app2:arc_width="96dp"/>

</android.support.v4.widget.DrawerLayout>